--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -583,5 +583,6 @@
   "xtvadmappcount":"XTV tasarrufidagi maktablariga",
   "htmadmappcount":"NTMlariga",
   "otheradmappcount":"Boshqa vazirlik tasarrufidagi maktablariga",
-  "GetAdmittedAplicationByMicroTeritory":"1-sinfga qabul qilingan o‘quvchilar soni(Mikro xudud bo'yicha)"
+  "GetAdmittedAplicationByMicroTeritory":"1-sinfga qabul qilingan o‘quvchilar soni(Mikro xudud bo'yicha)",
+  "importfile": "Fayl"
 }
