--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -580,5 +580,6 @@
   "xtvadmappcount":"ХТВ тасарруфидаги мактабларига",
   "htmadmappcount":"НТМларига",
   "otheradmappcount":"Бошқа вазирлик тасарруфидаги мактабларига",
-  "GetAdmittedAplicationByMicroTeritory":"1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)"
+  "GetAdmittedAplicationByMicroTeritory":"1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)",
+  "importfile": "Файл"
 }
