--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -609,5 +609,6 @@
   "htmadmappcount":"НОУ",
   "otheradmappcount":"В школы, находящиеся в ведении других министерств",
   "GetAdmittedAplicationByMicroTeritory":"Количество учащихся, принятых в 1 класс (по микрорайонам)",
-  "importfile": "Файл"
+  "importfile": "Файл",
+  "select": "Выбрать"
 }
