--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -581,5 +581,6 @@
   "htmadmappcount":"НТМларига",
   "otheradmappcount":"Бошқа вазирлик тасарруфидаги мактабларига",
   "GetAdmittedAplicationByMicroTeritory":"1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)",
-  "importfile": "Файл"
+  "importfile": "Файл",
+  "select": "Танланг"
 }
