--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -584,5 +584,6 @@
   "htmadmappcount":"NTMlariga",
   "otheradmappcount":"Boshqa vazirlik tasarrufidagi maktablariga",
   "GetAdmittedAplicationByMicroTeritory":"1-sinfga qabul qilingan o‘quvchilar soni(Mikro xudud bo'yicha)",
-  "importfile": "Fayl"
+  "importfile": "Fayl",
+  "select": "Тanlang"
 }
