--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -583,5 +583,6 @@
   "GetAdmittedAplicationByMicroTeritory":"1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)",
   "importfile": "Файл",
   "select": "Танланг",
-  "Contractinformation": "Шартнома маълумотлари"
+  "Contractinformation": "Шартнома маълумотлари",
+  "Contractschedule": "Тўлов шартнома қиймати"
 }
