--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -586,5 +586,8 @@
   "Contractinformation": "Шартнома маълумотлари",
   "Contractschedule": "Тўлов шартнома қиймати",
   "WantNoStatus" :"Ҳақиқатдан ҳам пассив қилишни хоҳлайсизми ?",
-  "WantYesStatus" :"Ҳақиқатдан ҳам актив қилишни хоҳлайсизми ?"
+  "WantYesStatus" :"Ҳақиқатдан ҳам актив қилишни хоҳлайсизми ?",
+  "Universities": "Университет маълумотлари",
+  "name": "номи",
+  "EditUniversities" :"Маълумотларни киритиш"
 }
