--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -614,5 +614,8 @@
   "Contractinformation": "Информация о контракте",
   "Contractschedule" :"Оплата стоимость контракта",
   "WantNoStatus" :"Haqiqatdan ham passiv qilishni xohlaysizmi ?",
-  "WantYesStatus" :"Haqiqatdan ham aktiv qilishni xohlaysizmi ?"
+  "WantYesStatus" :"Haqiqatdan ham aktiv qilishni xohlaysizmi ?",
+  "Universities": "Информация университета",
+  "name": "имя",
+  "EditUniversities":"Ввод данных"
 }
