--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -24,8 +24,8 @@
   "latitude": "Kenglik",
   "longitude": "Uzunlik",
   "Print": "Chop etish",
-  "languagename" : "Til",
-"translatetext" : "Nomi",
+  "languagename": "Til",
+  "translatetext": "Nomi",
   "appointmentdate": "Ocheret kuni",
   "appointmenttime": "Ocheret vaqti",
   "CreateAdmissionQueueAdmin": "Navbatni boshqarish",
@@ -62,7 +62,7 @@
   "DisplayName": "Foydalanuvchi F.I.SH.",
   "Email": "Elektron manzil",
   "MobileNumber": "Mobil telefon raqami",
-  "entermobilenumber" : "Mobil telefon raqami ko`rsatilmagan",
+  "entermobilenumber": "Mobil telefon raqami ko`rsatilmagan",
   "BasicApplicantCount": "Asosiy kvota arizalari ",
   "DopApplicantCount": "Qo'shimcha qvota arizalari",
   "role": "Rollar",
@@ -546,51 +546,77 @@
   "RegAdmissionApplication": "Arizalarni ro'yhatga olish",
   "EditRegAdmissionApplication": "Arizalarni ro'yhatga olish (Tahrirlash)",
   "viewregadmissionapplication": "Arizalarni ro'yhatga olish (ko'rish)",
-  "GetStreetHouseListInMap" : "Maktabga qabul qilinganlarning xaritada joylashuvi",
-  "LocationTypeId1" : "Mikrohudud",
-  "LocationTypeId2" : "Mikrohududdan tashqari (tuman ichida)",
-  "LocationTypeId3" : "Mikrohududdan tashqari",
-  "isVisibleHouseName" : "Uy nomerini ko'rsatish",
-  "TerritoryTable" : "Hududlar",
-  "streethouseNotSelected" : "Uy raqami kiritilmagan",
-  "teachersphoto" : "Rasm",
-  "isregbycadastralnumber" : "Kadastr bo'yicha",
-  "templiveplace" : "Vaqtinchalik yashash joyi",
-  "cadastrnumber" : "Kadastr nomer",
-  "cadastrnumberNotCorrect" : "Kadastr raqam noto'g'ri kiritilgan",
-  "isidcard" : "ID-karta",
-  "AddressByCadastr" : "Kadastr bo'yicha yashash manzili",
-  "RegOflineAdmissionApp" : "1-sinfga qabul qilish arizasi(Ofline)",
-  "EditRegOflineAdmissionApp" : "1-sinfga qabul qilish arizasi(Ofline)",
-  "ismicroterritory":"Mikro hudud bo'yicha ro'yxatdan o'tgan",
-  "microterritory" : "Mikro hudud",
-  "notmicroterritory" : "Mikro hududdan tashqari",
-  "GetAdmittedAplicationCount":"1-sinfga qabul qilingan o‘quvchilar soni(Tillar kesimida)",
-  "admappcount":"Jami",
-  "shundan":"Shundan",
-  "oflineadmappcount":"An'anaviy shaklda",
-  "onlineadmappcount":"Onlayn shaklda",
-  "admappcountbyeducationlang":"1-sinfga qabul qilingan o‘quvchilar soni",
-  "admappcount1":"O‘zbek tilida",
-  "admappcount2":"Rus tilida",
-  "admappcount3":"Tojik tilida",
-  "admappcount4":"Qozoq tilida",
-  "admappcount5":"Qirg‘iz tilida",
-  "admappcount6":"Turkman tilida",
-  "admappcount7":"Qoraqalpoq tilida",
-  "admappcountinmicroterritory":"Mikrohudud bo‘yicha",
-  "admappcountoutmicroterritory":"Mikrohududdan tashqari",
-  "xtvadmappcount":"XTV tasarrufidagi maktablariga",
-  "htmadmappcount":"NTMlariga",
-  "otheradmappcount":"Boshqa vazirlik tasarrufidagi maktablariga",
-  "GetAdmittedAplicationByMicroTeritory":"1-sinfga qabul qilingan o‘quvchilar soni(Mikro xudud bo'yicha)",
+  "GetStreetHouseListInMap": "Maktabga qabul qilinganlarning xaritada joylashuvi",
+  "LocationTypeId1": "Mikrohudud",
+  "LocationTypeId2": "Mikrohududdan tashqari (tuman ichida)",
+  "LocationTypeId3": "Mikrohududdan tashqari",
+  "isVisibleHouseName": "Uy nomerini ko'rsatish",
+  "TerritoryTable": "Hududlar",
+  "streethouseNotSelected": "Uy raqami kiritilmagan",
+  "teachersphoto": "Rasm",
+  "isregbycadastralnumber": "Kadastr bo'yicha",
+  "templiveplace": "Vaqtinchalik yashash joyi",
+  "cadastrnumber": "Kadastr nomer",
+  "cadastrnumberNotCorrect": "Kadastr raqam noto'g'ri kiritilgan",
+  "isidcard": "ID-karta",
+  "AddressByCadastr": "Kadastr bo'yicha yashash manzili",
+  "RegOflineAdmissionApp": "1-sinfga qabul qilish arizasi(Ofline)",
+  "EditRegOflineAdmissionApp": "1-sinfga qabul qilish arizasi(Ofline)",
+  "ismicroterritory": "Mikro hudud bo'yicha ro'yxatdan o'tgan",
+  "microterritory": "Mikro hudud",
+  "notmicroterritory": "Mikro hududdan tashqari",
+  "GetAdmittedAplicationCount": "1-sinfga qabul qilingan o‘quvchilar soni(Tillar kesimida)",
+  "admappcount": "Jami",
+  "shundan": "Shundan",
+  "oflineadmappcount": "An'anaviy shaklda",
+  "onlineadmappcount": "Onlayn shaklda",
+  "admappcountbyeducationlang": "1-sinfga qabul qilingan o‘quvchilar soni",
+  "admappcount1": "O‘zbek tilida",
+  "admappcount2": "Rus tilida",
+  "admappcount3": "Tojik tilida",
+  "admappcount4": "Qozoq tilida",
+  "admappcount5": "Qirg‘iz tilida",
+  "admappcount6": "Turkman tilida",
+  "admappcount7": "Qoraqalpoq tilida",
+  "admappcountinmicroterritory": "Mikrohudud bo‘yicha",
+  "admappcountoutmicroterritory": "Mikrohududdan tashqari",
+  "xtvadmappcount": "XTV tasarrufidagi maktablariga",
+  "htmadmappcount": "NTMlariga",
+  "otheradmappcount": "Boshqa vazirlik tasarrufidagi maktablariga",
+  "GetAdmittedAplicationByMicroTeritory": "1-sinfga qabul qilingan o‘quvchilar soni(Mikro xudud bo'yicha)",
   "importfile": "Fayl",
   "select": "Тanlang",
   "Contractinformation": "Shartnoma ma'lumotlari",
   "Contractschedule": "To'lov shartnoma qiymati",
-  "WantNoStatus" :"Haqiqatdan ham passiv qilishni xohlaysizmi ?",
-  "WantYesStatus" :"Haqiqatdan ham aktiv qilishni xohlaysizmi ?",
+  "WantNoStatus": "Haqiqatdan ham passiv qilishni xohlaysizmi ?",
+  "WantYesStatus": "Haqiqatdan ham aktiv qilishni xohlaysizmi ?",
   "Universities": "Universitet ma'lumotlari",
   "name": "nomi",
-  "EditUniversities" :"Ma'lumotlarni kiritish"
+  "EditUniversities": "Ma'lumotlarni kiritish",
+  "uniInfo": "Universitet haqida",
+  "avgContractSum": "To'lov-kontraktning o'rtacha miqdori",
+  "minContractSum": "To'lov-kontraktning eng kam miqdori",
+  "maxContractSum": "To'lov-kontraktning eng yuqori miqdori",
+  "routeCount": "OTM yo'nalishlar soni",
+  "mapUrl": "OTM lokatsiyasi",
+  "mashrut": "Jamoat transportlar raqami",
+  "callNumber": "Telefon raqami",
+  "metro": "Eng yaqin metro bekatlari",
+  "facilities": "OTM qulayliklari",
+  "dormitory": "Yotoqxona mavjudligi",
+  "licenses": "Sertifikatni yuklash",
+  "photos": "OTM rasmni yuklash",
+  "academicYearName": "O'quv yili",
+  "basis": "Asos",
+  "documentDate": "Hujjat sanasi",
+  "documentNumber": "Hujjat raqami",
+  "academicYear": "O'quv yili",
+  "EditContractschedule": "To'lov-kontrakt ma'lumotlarini kiritish",
+  "Clone": "Shakillantirish",
+  "checkingAccount": "Hisob raqamini tanlash",
+  "Application": "Ariza",
+  "All": "Barchasi",
+  "New": "Yangi arizalar",
+  "Approved": "Tasdiqlangan arizalar",
+  "Rejected": "Rad etilgan arizalar"
 }
