--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -593,14 +593,14 @@
   "uniInfo": "Университет ҳақида",
   "avgContractSum": "Тўлов-контрактнинг ўртача миқдори",
   "minContractSum": "Тўлов-контрактнинг енг кам миқдори",
-  "maxContractSum": "",
-  "routeCount": "",
-  "mapUrl": "",
-  "mashrut": "",
-  "callNumber": "",
-  "metro": "",
-  "facilities": "",
-  "dormitory": "",
-  "licenses": "",
-  "photos": ""
+  "maxContractSum": "Тўлов-контрактнинг енг юқори миқдори",
+  "routeCount": "ОТМ йўналишлар сони",
+  "mapUrl": "ОТМ локацияси",
+  "mashrut": "Жамоат транспортлар рақами",
+  "callNumber": "Телефон рақами",
+  "metro": "Енг яқин метро бекатлари",
+  "facilities": "ОТМ қулайликлари",
+  "dormitory": "Ётоқхона мавжудлиги",
+  "licenses": "Сертификатни юклаш",
+  "photos": "ОТМ расмни юклаш"
 }
