--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -618,18 +618,18 @@
   "Universities": "Информация университета",
   "name": "имя",
   "EditUniversities":"Ввод данных",
-  "uniInfo": "",
-  "avgContractSum": "",
-  "minContractSum": "",
-  "maxContractSum": "",
-  "routeCount": "",
-  "mapUrl": "",
-  "mashrut": "",
-  "callNumber": "",
-  "metro": "",
-  "facilities": "",
-  "dormitory": "",
-  "licenses": "",
-  "photos": "",
+  "uniInfo": "Университет ҳақида",
+  "avgContractSum": "Тўлов-контрактнинг ўртача миқдори",
+  "minContractSum": "Тўлов-контрактнинг енг кам миқдори",
+  "maxContractSum": "Тўлов-контрактнинг енг юқори миқдори",
+  "routeCount": "ОТМ йўналишлар сони",
+  "mapUrl": "ОТМ локацияси",
+  "mashrut": "Жамоат транспортлар рақами",
+  "callNumber": "Телефон рақами",
+  "metro": "Енг яқин метро бекатлари",
+  "facilities": "ОТМ қулайликлари",
+  "dormitory": "Ётоқхона мавжудлиги",
+  "licenses": "Сертификатни юклаш",
+  "photos": "ОТМ расмни юклаш",
   "Application": "Заявление"
 }
