--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -619,17 +619,17 @@
   "name": "имя",
   "EditUniversities":"Ввод данных",
   "uniInfo": "Университет ҳақида",
-  "avgContractSum": "Тўлов-контрактнинг ўртача миқдори",
-  "minContractSum": "Тўлов-контрактнинг енг кам миқдори",
-  "maxContractSum": "Тўлов-контрактнинг енг юқори миқдори",
-  "routeCount": "ОТМ йўналишлар сони",
-  "mapUrl": "ОТМ локацияси",
-  "mashrut": "Жамоат транспортлар рақами",
-  "callNumber": "Телефон рақами",
-  "metro": "Енг яқин метро бекатлари",
-  "facilities": "ОТМ қулайликлари",
-  "dormitory": "Ётоқхона мавжудлиги",
-  "licenses": "Сертификатни юклаш",
-  "photos": "ОТМ расмни юклаш",
+  "avgContractSum": "Средняя сумма платежа по контракту",
+  "minContractSum": "Минимальная сумма платежа по контракту",
+  "maxContractSum": "Максимальная сумма платежа по контракту",
+  "routeCount": "Количество ОТМ-направлений",
+  "mapUrl": "ОТМ локация",
+  "mashrut": "Номер общественного транспорта",
+  "callNumber": "Номер телефона",
+  "metro": "Ближайшие остановки метро",
+  "facilities": "OTM услуги",
+  "dormitory": "Наличие общежития",
+  "licenses": "Загрузите сертификат",
+  "photos": "Загрузка изображения OTM",
   "Application": "Заявление"
 }
