--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -602,5 +602,6 @@
   "facilities": "ОТМ қулайликлари",
   "dormitory": "Ётоқхона мавжудлиги",
   "licenses": "Сертификатни юклаш",
-  "photos": "ОТМ расмни юклаш"
+  "photos": "ОТМ расмни юклаш",
+  "directorFullName": "ОТМ ректори (директори)"
 }
