--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -622,14 +622,15 @@
   "avgContractSum": "Средняя сумма платежа по контракту",
   "minContractSum": "Минимальная сумма платежа по контракту",
   "maxContractSum": "Максимальная сумма платежа по контракту",
-  "routeCount": "Количество ОТМ-направлений",
-  "mapUrl": "ОТМ локация",
+  "routeCount": "Количество ВУЗ-направлений",
+  "mapUrl": "ВУЗ локация",
   "mashrut": "Номер общественного транспорта",
   "callNumber": "Номер телефона",
   "metro": "Ближайшие остановки метро",
-  "facilities": "OTM услуги",
+  "facilities": "ВУЗ услуги",
   "dormitory": "Наличие общежития",
   "licenses": "Загрузите сертификат",
-  "photos": "Загрузка изображения OTM",
-  "Application": "Заявление"
+  "photos": "Загрузка изображения ВУЗ",
+  "Application": "Заявление",
+  "directorFullName": "Ректор (директор) Вуза"
 }
