--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -607,5 +607,6 @@
   "academicYearName": "Ўқув йили",
   "basis": "Aсос",
   "documentDate": "Ҳужжат санаси",
-  "documentNumber": "Ҳужжат рақами"
+  "documentNumber": "Ҳужжат рақами",
+  "checkingAccount": "Ҳисоб рақамини танлаш"
 }
