--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -636,5 +636,6 @@
   "academicYearName": "Учебный год",
   "basis": "Основа",
   "documentDate": "Дата документа",
-  "documentNumber": "Номер документа"
+  "documentNumber": "Номер документа",
+  "checkingAccount": "Выбрать номер счета"
 }
