--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -608,5 +608,7 @@
   "basis": "Aсос",
   "documentDate": "Ҳужжат санаси",
   "documentNumber": "Ҳужжат рақами",
-  "checkingAccount": "Ҳисоб рақамини танлаш"
+  "checkingAccount": "Ҳисоб рақамини танлаш",
+  "Application": "Қабул аризалари",
+  "Applications" :"Aризалар"
 }
