--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -631,7 +631,7 @@
   "dormitory": "Наличие общежития",
   "licenses": "Загрузите сертификат",
   "photos": "Загрузка изображения ВУЗ",
-  "Application": "Заявки на поступление",
+  "Application": "Заявления о приеме",
   "directorFullName": "Ректор (директор) Вуза",
   "academicYearName": "Учебный год",
   "basis": "Основа",
