--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -638,5 +638,9 @@
   "documentDate": "Дата документа",
   "documentNumber": "Номер документа",
   "checkingAccount": "Выбрать номер счета",
-  "Applications" :"Заявление"
+  "Applications" :"Заявление",
+  "All": "Все",
+  "New": "Новые заявки",
+  "Approved": "Одобренные заявки",
+  "Rejected": "Отклоненные заявки"
 }
