--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -642,5 +642,11 @@
   "All": "Все",
   "New": "Новые заявки",
   "Approved": "Одобренные заявки",
-  "Rejected": "Отклоненные заявки"
+  "Rejected": "Отклоненные заявки",
+  "contractSum": "Сумма контракта",
+  "createDate": "Дата создан",
+  "eduTypeName" :"Тип образования",
+  "fullName" :"Ф.И.О",
+  "otmName": "Имя вуза",
+  "specialitlyName" :"Направление"
 }
