--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -614,5 +614,11 @@
   "All": "Барчаси",
   "New": "Янги аризалар",
   "Approved": "Тасдиқланган аризалар",
-  "Rejected": "Рад етилган аризалар"
+  "Rejected": "Рад етилган аризалар",
+  "contractSum": "Контракт сумма",
+  "createDate": "Яратилган сана",
+  "eduTypeName" :"Таълим тури",
+  "fullName" :"Ф.И.Ш",
+  "otmName": "ОТМ номи",
+  "specialitlyName" :"Юналиш"
 }
