--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -20,8 +20,8 @@
   "AppCount": "Илова сони",
   "GetApplicantCountByStatus": "Аризалар ҳолати бўйича ҳисобот",
   "History": "Тарих",
-  "languagename" : "Тил",
-"translatetext" : "Номи",
+  "languagename": "Тил",
+  "translatetext": "Номи",
   "externalid": "Ташқи ИД",
   "PleaseSelectOblast": "Вилоятни танланг",
   "PleaseSelectRegion": "Туманни танланг",
@@ -204,7 +204,7 @@
   "DisplayName": "Фойдаланувчи Ф.И.Ш.",
   "Email": "Электрон манзил",
   "MobileNumber": "Мобил телефон рақами",
-  "entermobilenumber" : "Мобил телефон рақами кўрсатилмаган",
+  "entermobilenumber": "Мобил телефон рақами кўрсатилмаган",
   "role": "Роллар",
   "WantReject": "Ҳақиқатдан рад этишни хоҳлайсизми?",
   "Description": "Рад этиш сабаби",
@@ -466,7 +466,6 @@
   "GetDuplicateMvdAdressApplicantCount": "Такрорланувчи манзилли фойдаланувчилар сони (ИИБ базасида)",
   "RegApplicationByAdmin": "Ариза киритиш (админ)",
   "AdmissionAppDdpe": "Ариза (XТБ)",
-
   "examaddress": "Имтиҳон ўтказиладиган жой",
   "exambuildingaddress": "Имтиҳон ўтказиладиган манзил",
   "exambuildingname": "Имтиҳон ўтказиладиган бино",
@@ -486,7 +485,6 @@
   "enterparentinfo": "Ота-она маълумотларини киритинг",
   "NotCorrectQuotatype": "Квота тури танланмаган",
   "SelectQueuetime": "Навбат вақтини кўрсатинг",
-
   "CheckAdm": "Аризани текшириш",
   "ChangeTypeId": "Aриза турини ўзгартириш",
   "SuccessChangeType": "Aриза тури муваффақиятли ўзгартирилди",
@@ -543,53 +541,53 @@
   "RegAdmissionApplication": "Аризаларни рўйхатга олиш",
   "EditRegAdmissionApplication": "Аризаларни рўйхатга олиш (Таҳрирлаш)",
   "viewregadmissionapplication": "Аризаларни рўйхатга олиш (кўриш)",
-  "GetStreetHouseListInMap" : "Мактабга қабул қилинганларнинг харитада жойлашуви",
-  "LocationTypeId1" : "Микроҳудуд",
-  "LocationTypeId2" : "Микроҳудуддан ташқари",
-  "LocationTypeId3" : "Микроҳудуддан ташқари",
-  "isVisibleHouseName" : "Уй номерини кўрсатиш",
-  "TerritoryTable" : "Ҳудудлар",
-  "streethouseNotSelected" : "Уй рақами киритилмаган",
-  "teachersphoto" : "Расм",
-  "isregbycadastralnumber" : "Кадастр бўйича",
-  "templiveplace" : "Вақтинчалик яшаш жойи",
-  "cadastrnumber" : "Кадастр номер",
-  "cadastrnumberNotCorrect" : "Кадастр рақам нотўғри киритилган",
-  "isidcard" : "ID-карта",
-  "AddressByCadastr" : "Кадастр бўйича яшаш манзили",
-  "RegOflineAdmissionApp" : "1-синфга қабул қилиш аризаси(офлайн)",
-  "EditRegOflineAdmissionApp" : "1-синфга қабул қилиш аризаси(офлайн)",
-  "ismicroterritory":"Микро ҳудуд бўйича рўйхатдан ўтган",
-  "microterritory" : "Микро ҳудуд",
-  "notmicroterritory" : "Микро ҳудуддан ташқари",
-  "GetAdmittedAplicationCount":"1-синфга қабул қилинган ўқувчилар сони(Тиллар кесимида)",
-  "admappcount":"Жами",
-  "shundan":"Шундан",
-  "oflineadmappcount":"Анъанавий шаклда",
-  "onlineadmappcount":"Онлайн шаклда",
-  "admappcountbyeducationlang":"1-синфга қабул қилинган ўқувчилар сони",
-  "admappcount1":"Ўзбек тилида",
-  "admappcount2":"Рус тилида",
-  "admappcount3":"Тожик тилида",
-  "admappcount4":"Қозоқ тилида",
-  "admappcount5":"Қирғиз тилида",
-  "admappcount6":"Туркман тилида",
-  "admappcount7":"Қорақалпоқ тилида",
-  "admappcountinmicroterritory":"Микрохудуд бўйича",
-  "admappcountoutmicroterritory":"Микрохудуддан ташқари",
-  "xtvadmappcount":"ХТВ тасарруфидаги мактабларига",
-  "htmadmappcount":"НТМларига",
-  "otheradmappcount":"Бошқа вазирлик тасарруфидаги мактабларига",
-  "GetAdmittedAplicationByMicroTeritory":"1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)",
+  "GetStreetHouseListInMap": "Мактабга қабул қилинганларнинг харитада жойлашуви",
+  "LocationTypeId1": "Микроҳудуд",
+  "LocationTypeId2": "Микроҳудуддан ташқари",
+  "LocationTypeId3": "Микроҳудуддан ташқари",
+  "isVisibleHouseName": "Уй номерини кўрсатиш",
+  "TerritoryTable": "Ҳудудлар",
+  "streethouseNotSelected": "Уй рақами киритилмаган",
+  "teachersphoto": "Расм",
+  "isregbycadastralnumber": "Кадастр бўйича",
+  "templiveplace": "Вақтинчалик яшаш жойи",
+  "cadastrnumber": "Кадастр номер",
+  "cadastrnumberNotCorrect": "Кадастр рақам нотўғри киритилган",
+  "isidcard": "ID-карта",
+  "AddressByCadastr": "Кадастр бўйича яшаш манзили",
+  "RegOflineAdmissionApp": "1-синфга қабул қилиш аризаси(офлайн)",
+  "EditRegOflineAdmissionApp": "1-синфга қабул қилиш аризаси(офлайн)",
+  "ismicroterritory": "Микро ҳудуд бўйича рўйхатдан ўтган",
+  "microterritory": "Микро ҳудуд",
+  "notmicroterritory": "Микро ҳудуддан ташқари",
+  "GetAdmittedAplicationCount": "1-синфга қабул қилинган ўқувчилар сони(Тиллар кесимида)",
+  "admappcount": "Жами",
+  "shundan": "Шундан",
+  "oflineadmappcount": "Анъанавий шаклда",
+  "onlineadmappcount": "Онлайн шаклда",
+  "admappcountbyeducationlang": "1-синфга қабул қилинган ўқувчилар сони",
+  "admappcount1": "Ўзбек тилида",
+  "admappcount2": "Рус тилида",
+  "admappcount3": "Тожик тилида",
+  "admappcount4": "Қозоқ тилида",
+  "admappcount5": "Қирғиз тилида",
+  "admappcount6": "Туркман тилида",
+  "admappcount7": "Қорақалпоқ тилида",
+  "admappcountinmicroterritory": "Микрохудуд бўйича",
+  "admappcountoutmicroterritory": "Микрохудуддан ташқари",
+  "xtvadmappcount": "ХТВ тасарруфидаги мактабларига",
+  "htmadmappcount": "НТМларига",
+  "otheradmappcount": "Бошқа вазирлик тасарруфидаги мактабларига",
+  "GetAdmittedAplicationByMicroTeritory": "1-синфга қабул қилинган ўқувчилар сони(Микро худуд бўйича)",
   "importfile": "Файл",
   "select": "Танланг",
   "Contractinformation": "Шартнома маълумотлари",
   "Contractschedule": "Тўлов шартнома қиймати",
-  "WantNoStatus" :"Ҳақиқатдан ҳам пассив қилишни хоҳлайсизми ?",
-  "WantYesStatus" :"Ҳақиқатдан ҳам актив қилишни хоҳлайсизми ?",
+  "WantNoStatus": "Ҳақиқатдан ҳам пассив қилишни хоҳлайсизми ?",
+  "WantYesStatus": "Ҳақиқатдан ҳам актив қилишни хоҳлайсизми ?",
   "Universities": "Университет маълумотлари",
   "name": "номи",
-  "EditUniversities" :"Маълумотларни киритиш",
+  "EditUniversities": "Маълумотларни киритиш",
   "uniInfo": "Университет ҳақида",
   "avgContractSum": "Тўлов-контрактнинг ўртача миқдори",
   "minContractSum": "Тўлов-контрактнинг енг кам миқдори",
@@ -610,15 +608,31 @@
   "documentNumber": "Ҳужжат рақами",
   "checkingAccount": "Ҳисоб рақамини танлаш",
   "Application": "Қабул аризалари",
-  "Applications" :"Aризалар",
+  "Applications": "Aризалар",
   "All": "Барчаси",
   "New": "Янги аризалар",
   "Approved": "Тасдиқланган аризалар",
   "Rejected": "Рад етилган аризалар",
   "contractSum": "Контракт сумма",
   "createDate": "Яратилган сана",
-  "eduTypeName" :"Таълим тури",
-  "fullName" :"Ф.И.Ш",
+  "eduTypeName": "Таълим тури",
+  "fullName": "Ф.И.Ш",
   "otmName": "ОТМ номи",
-  "specialitlyName" :"Юналиш"
+  "specialitlyName": "Юналиш",
+  "ApplicantInformation": "Aбитурийент маълумотлари",
+  "Informationapplicantsapplication": "Абитурийент аризасининг маълумотлари",
+  "GenderAndYearOfbirth": "Жинси ва туғилган йили",
+  "Citizenship": "Фуқоролиги",
+  "PermanentResidenceAddress": "Доимий яшаш манзили",
+  "InformationOfTheApplicantApplication": "Aбитурийент аризасининг маълумотлари",
+  "districtName": "Туман",
+  "diplomaSerialAndNumber": "Диплом серияси ва рақами",
+  "eduFinishName": "Тамомлаган таълим муассасаси",
+  "eduInstitutionTypeName": "Таълим муассаса тури",
+  "eduLanguage": "Таълим тили",
+  "regionName": "Вилоят",
+  "degreeName": "Таълим шакли",
+  "eduLevelName": "Таълим курси",
+  "languageName": "Таълим тили",
+  "specialityName": "Юналиш"
 }
