--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -654,5 +654,6 @@
   "languageName": "Ta'lim tili",
   "specialityName": "Yo'nalish",
   "APPROVED": "Tasdiqlangan",
-  "REJECTED": "Rad etilganlar"
+  "REJECTED": "Rad etilganlar",
+  "type": "Shartnoma turi"
 }
