--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -637,5 +637,6 @@
   "specialityName": "Юналиш",
   "APPROVED": "Тасдиқланган",
   "REJECTED": "Рад этилганлар",
-  "type": "Шартнома тури"
+  "type": "Шартнома тури",
+  "ContractApplications" :"Контракт аризалари"
 }
