--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -666,5 +666,6 @@
   "specialityName": "Направление",
   "APPROVED": "Подтверждён",
   "REJECTED": "Отклоненный",
-  "type" :"Тип контракта"
+  "type" :"Тип контракта",
+  "ContractApplications": "Заявки на контракт"
 }
