--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -657,5 +657,6 @@
   "REJECTED": "Rad etilganlar",
   "type": "Shartnoma turi",
   "ContractApplications": "Kontrakt arizalari",
-  "EditTemplate" :"Shablon tahrirlash"
+  "EditTemplate" :"Shablon tahrirlash",
+  "ContractType" :"Shartnoma turi"
 }
